--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
-<section>
-  <h1>Movie search engine is coming soon!</h1>
+<section class="movie-search-section">
+  <div class="container">
+    <h1>Movie search engine is coming soon!</h1>
 
-  <router-outlet></router-outlet>
+    <app-search-form></app-search-form>
+    <app-search-results></app-search-results>
+
+    <router-outlet></router-outlet>
+  </div>
 </section>
 
